# paulsha-cortex

./: .gitignore  .paul-project.yml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.cortex/: work-items.yaml
changelog.d/: 10.md  106-workflow-card-recovery.md  108-copilot-commit-permissions.md  112-archive-gate-warn.md  116-builder-deliverables.md  120-bot-findings-in-repair.md  123-custom-first-identities.md  126-planner-domain-unpin.md  128-deterministic-plan-card.md  13.md  130-builder-capability-filter.md  14-active-auto-claim.md  14-authority-active-resume.md  14-authority-ignore-topic.md  14-define-resume.md  14-delivery-authority-rebase.md  14-delivery-gates.md  14-doctor-docs.md  14-gh-api-pagination.md  14-handoff-contracts.md  14-integration.md  14-monitor-providers.md  14-monitor-read-model.md  14-planner-disposable-trust.md  14-planner-sandbox-retry.md  14-planning-brainstorm.md  14-planning-headless-evidence.md  14-preflight-disposable-home.md  14-preflight-runtime-isolation.md  14-provider-freshness-clock.md  14-resume-needs-human.md  14-reviewer-terminal-contract.md  14-ship-managed-artifacts-preflight.md  14-unified-work-lifecycle-archive.md  14-work-abandon.md  14-workflow-jsonl-evidence.md  14-workflow-retry-build.md  14-worktree-branch-reuse.md  150-terminal-pr-pagination.md  159-completion-record-determinism.md  (+61 more)
docs/: review.md  unified-work-lifecycle.md
paulsha_cortex/: _yaml.py  cli.py  doctor.py
tests/: conftest.py  test_cli_entry.py  test_cli_help_alignment.py  test_cli_porcelain_routing.py  test_cli_version.py  (+82 more)
(+240 files in other folders)
